--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "console-browserify": "^1.2.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "cors": "^2.8.5"
   }
 }
