--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "jquery": "^3.7.1",
+    "lightbox2": "^2.11.4"
   }
 }
